# rust-graphql-services

./: .gitignore  .graphqlconfig.yaml  Cargo.toml  README.md  config.yaml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2019-06-18-160444_enable_extensions/: down.sql  up.sql
backend/migrations/2019-06-18-160446_create_users/: up.sql
backend/src/: logging.rs  main.rs  server.rs  settings.rs
backend/src/app/: mod.rs
backend/src/app/controllers/: graphql.rs  graphql_controller.rs
backend/src/app/graphql/: mod.rs  schema.rs
backend/src/app/graphql/types/: user.rs
backend/src/app/models/: mod.rs  user.rs
backend/src/db/: mod.rs  schema.rs
backend/src/graphql/: schema.rs
frontend/: Cargo.toml
