[package]
name = "backend"
version = "0.1.0"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.2", features = ["ssl"] }
actix-rt = "0.2"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "serde_json", "uuid", "chrono"] }
r2d2 = "0.8"
dotenv = "0.14.1"
futures = "0.1.27"
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.9"
argonautica = "0.2.0"
clap = "2.33.0"
config = "0.9.3"
failure = "0.1.5"
openssl = "0.10"
juniper = "0.12.0"

# Logging
log  = "0.4.6"
fern = "0.5.8"
