[package]
name = "backend"
description = "Example Backend Service"
version = "0.1.0"
readme  = "README.md"
authors = ["Nate Strandberg <nater540@gmail.com>"]
edition = "2018"
workspace = "../"

[[bin]]
name = "backend"
path = "src/main.rs"
doc  = false

[dependencies]
actix-web = { version = "1.0.2", features = ["ssl"] }
actix-cors = "0.1.0"
actix-rt = "0.2"
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "serde_json", "chrono"] }
r2d2 = "0.8"
dotenv = "0.14.1"
futures = "0.1.27"
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.9"
argonautica = "0.2.0"
clap = "2.33.0"
config = "0.9.3"
failure = "0.1.5"
openssl = "0.10"
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["uuid", "chrono"] }
lazy_static = "1.3.0"

# Logging
log  = "0.4.6"
fern = "0.5.8"
